cmd/openshift/operator/kodata/tekton-hub/v1.14.0/ui/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-hub-ui
  labels:
    app: tekton-hub-ui
spec:
  selector:
    matchLabels:
      app: tekton-hub-ui
  template:
    metadata:
      name: tekton-hub-ui
      labels:
        app: tekton-hub-ui
    spec:
      securityContext:
        fsGroup: 65532
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: tekton-hub-ui
          image: quay.io/tekton-hub/ui:v1.14.0
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 65532
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: tekton-hub-ui
  labels:
    app: tekton-hub-ui
spec:
  type: NodePort
  selector:
    app: tekton-hub-ui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tekton-hub-ui
spec:
  to:
    kind: Service
    name: tekton-hub-ui
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge

---
